Update D3D12MA & initialize allocator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,10 @@ file(GLOB_RECURSE MY_HEADER_FILES ${MY_SOURCE_DIR}/*.h**)
 
 include_directories(${MY_INCLUDE_DIR})
 
-add_executable(d3d12_mesh_shaders ${MY_SOURCE_FILES} ${MY_HEADER_FILES})
-target_link_libraries(d3d12_mesh_shaders d3d12.lib dxgi.lib ${MY_LIBRARY_DIR}/SDL2.lib ${MY_LIBRARY_DIR}/SDL2main.lib)
+add_executable(d3d12_mesh_shaders
+        ${MY_SOURCE_FILES} ${MY_HEADER_FILES}
+        ${MY_INCLUDE_DIR}/D3D12MemAlloc/D3D12MemAlloc.cpp)
+target_link_libraries(d3d12_mesh_shaders
+        d3d12.lib dxgi.lib
+        ${MY_LIBRARY_DIR}/SDL2.lib
+        ${MY_LIBRARY_DIR}/SDL2main.lib)
