Preperations for rendering a mesh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,29 @@ include_directories(${MY_INCLUDE_DIR})
 
 add_executable(d3d12_mesh_shaders
         ${MY_SOURCE_FILES} ${MY_HEADER_FILES}
-        ${MY_INCLUDE_DIR}/D3D12MemAlloc/D3D12MemAlloc.cpp)
+
+        # D3D12MemAlloc
+        ${MY_INCLUDE_DIR}/D3D12MemAlloc/D3D12MemAlloc.cpp
+
+        # fastobj
+        ${MY_INCLUDE_DIR}/fast_obj/fast_obj.c
+
+        # meshoptimizer
+        ${MY_INCLUDE_DIR}/meshoptimizer/allocator.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/clusterizer.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/indexcodec.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/indexgenerator.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/overdrawanalyzer.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/overdrawoptimizer.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/simplifier.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/spatialorder.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/stripifier.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/vcacheanalyzer.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/vcacheoptimizer.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/vertexcodec.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/vertexfilter.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/vfetchanalyzer.cpp
+        ${MY_INCLUDE_DIR}/meshoptimizer/vfetchoptimizer.cpp)
 target_link_libraries(d3d12_mesh_shaders
         d3d12.lib dxgi.lib
         ${MY_LIBRARY_DIR}/SDL2.lib
